add new Examples CountDownLatchDemo SemaphoreDemo SequenceGenerator

--- a/JAVAPORTABLELEARNINGS/.settings/org.eclipse.core.resources.prefs
+++ b/JAVAPORTABLELEARNINGS/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/Builder/GoodClass.java=UTF-8
 encoding//src/Main.java=UTF-8
+encoding//src/SynchronizedThreads/SemaphoreDemo.java=UTF-8
 encoding//src/Thread/MyOperationWithBox.java=UTF-8
