--- a/JAVAPORTABLELEARNINGS/.settings/org.eclipse.core.resources.prefs
+++ b/JAVAPORTABLELEARNINGS/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,8 @@
 eclipse.preferences.version=1
+encoding//src/AbstractClass/Issue1.java=UTF-8
+encoding//src/AbstractFactory/AbstractFactory.java=UTF-8
 encoding//src/Builder/GoodClass.java=UTF-8
+encoding//src/Delegte/DelegateApp.java=UTF-8
 encoding//src/Main.java=UTF-8
 encoding//src/SynchronizedThreads/SemaphoreDemo.java=UTF-8
 encoding//src/Thread/MyOperationWithBox.java=UTF-8
